service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mymicrosvc
  name: mymicrosvc
spec:
  clusterIP: 
  ports:
    - name: 5555-tcp
      port: 56565
      protocol: TCP
      targetPort: 5555
  selector:
    deploymentconfig: mymicrosvc
  sessionAffinity: None
  type: ClusterIP
