route.yaml
apiVersion: v1
kind: Route
metadata:
  name: mymicrosvc
spec:
  host: mymicrosvc.apps.ocp1.eur.ad.sag
  port:
    targetPort: 5555-tcp
  to:
    kind: Service
    name: mymicrosvc
    weight: 100
  wildcardPolicy: None
